pom change and final commit

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>comeee98/${project.artifactId}</name>
+						<name>comeee98/photo-upload</name>
 					</image>
 					<excludes>
 						<exclude>
